<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Android_SQLite2</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="loginBtn">登录</string>
    <string name="registerBtn">注册</string>
    <string name="usernameHint">用户名</string>
    <string name="passwordHint">密码</string>
    <string name="regUsernameEditHint">用户名</string>
    <string name="regPasswordEditHint">密码</string>
    <string name="regPasswordRepeatEditHint">重复上面的密码</string>
    <string name="regEmailHint">邮箱</string>
    <string name="regBirth">生日</string>
    <string name="regDateSelectBtn">选择</string>
    <string name="regNameEditHint">名称</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="subject">主题</string>
    <string name="content">内容</string>
    <string name="note_time">时间</string>
    <string name="add_note_btn">添加日程</string>

</resources>
