<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/regUsernameEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/regUsernameEditHint" >
    </EditText>

    <EditText
        android:id="@+id/regPasswordEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/regPasswordEditHint"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/regPasswordRepeatEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/regPasswordRepeatEditHint"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/regEmailEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/regEmailHint"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/regNameEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/regNameEditHint" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/regBirthEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:focusable="false"
                android:hint="@string/regBirth"
                android:inputType="textCapWords|date" >

                <requestFocus />

            </EditText>

            <Button
                android:id="@+id/regDateSelectBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/regDateSelectBtn" />

        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/regRegisterBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registerBtn" />

</LinearLayout>
